--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socio</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="/Users/maarvin/Documents/Project/Socio/style.css">
-    <script src="Socio.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./Socio.js"></script>
 </head>
 <body>
     <nav>
@@ -22,7 +22,7 @@
             <div class="create">
                 <label class="btn btn-primary" for="create-post">Create</label>
                 <div class="profile-photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg">
+                    <img src="./pics/S5.jpeg">
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
             <div class="left">
                 <a class="profile">
                     <div class="profile-photo">
-                        <img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg">
+                        <img src="./pics/S5.jpeg">
                     </div>
                     <div class="handle">
                         <h4>mira</h4>
@@ -59,7 +59,7 @@
                             <div class="notification-popup">
                                 <div>
                                     <div class="profile-photo">
-                                        <img src="/Users/maarvin/Documents/Project/Socio/pics/PP11.jpeg">
+                                        <img src="./pics/PP11.jpeg">
                                     </div>
                                     <div class="notification-body">
                                         <b>Nika</b> accepted your friend request
@@ -68,7 +68,7 @@
                                 </div>
                                 <div>
                                     <div class="profile-photo">
-                                        <img src="/Users/maarvin/Documents/Project/Socio/pics/PP11.jpeg">
+                                        <img src="./pics/PP11.jpeg">
                                     </div>
                                     <div class="notification-body">
                                         <b>Ruke</b> accepted your friend request
@@ -107,25 +107,25 @@
                 <div class="stories">
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg">
+                            <img src="./pics/S5.jpeg">
                         </div>
                         <p class="name">Your Story</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp">
+                            <img src="./pics/S3.webp">
                         </div>
                         <p class="name">Alia</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/S2.webp">
+                            <img src="./pics/S2.webp">
                         </div>
                         <p class="name">Mike</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp">
+                            <img src="./pics/PP5.webp">
                         </div>
                         <p class="name">Selena</p>
                     </div>
@@ -135,7 +135,7 @@
                 
             <form class="create-post">
                 <div class="profile-photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg">
+                    <img src="./pics/S5.jpeg">
                 </div>
                 <input type="text" placeholder="What's going on?" id="create-post">
                 <input type="submit" value="Post" class="btn btn-primary">
@@ -152,7 +152,7 @@
                     <div class="head">
                         <div class="user">
                             <div class="profile-photo">
-                                <img src="/Users/maarvin/Documents/Project/Socio/pics/PP8.jpeg">
+                                <img src="./pics/PP8.jpeg">
                             </div>
                             <div class="info">
                                 <h3>Cena</h3>
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="photo">
-                        <img src="/Users/maarvin/Documents/Project/Socio/pics/P1.avif">
+                        <img src="./pics/P1.avif">
                     </div>
                     <div class="action-buttons">
                         <div class="int-buttons">
@@ -179,13 +179,13 @@
                     </div>
 
                     <div class="liked-by">
-                        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+                        <span><img src="./pics/PP5.webp"></span>
                     <!-- </div> -->
                     <!-- <div class="liked-by"> -->
-                        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+                        <span><img src="./pics/S3.webp"></span>
                     <!-- </div> -->
                     <!-- <div class="liked-by"> -->
-                        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+                        <span><img src="./pics/S5.jpeg"></span>
                     <!-- </div> -->
                     <p>liked by <b>Selena</b> and <b>200 others</b></p>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="head">
                     <div class="user">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP3.webp">
+                            <img src="./pics/PP3.webp">
                         </div>
                         <div class="info">
                             <h3>Nina</h3>
@@ -214,7 +214,7 @@
                 </div>
 
                 <div class="photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/P2.jpg">
+                    <img src="./pics/P2.jpg">
                 </div>
                 <div class="action-buttons">
                     <div class="int-buttons">
@@ -228,13 +228,13 @@
                 </div>
 
                 <div class="liked-by">
-                    <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+                    <span><img src="./pics/PP5.webp"></span>
                 <!-- </div> -->
                 <!-- <div class="liked-by"> -->
-                    <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+                    <span><img src="./pics/S3.webp"></span>
                 <!-- </div> -->
                 <!-- <div class="liked-by"> -->
-                    <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+                    <span><img src="./pics/S5.jpeg"></span>
                 <!-- </div> -->
                 <p>liked by <b>Selena</b> and <b>822 others</b></p>
             </div>
@@ -250,7 +250,7 @@
             <div class="head">
                 <div class="user">
                     <div class="profile-photo">
-                        <img src="/Users/maarvin/Documents/Project/Socio/pics/PP9.webp">
+                        <img src="./pics/PP9.webp">
                     </div>
                     <div class="info">
                         <h3>JD</h3>
@@ -263,7 +263,7 @@
             </div>
 
             <div class="photo">
-                <img src="/Users/maarvin/Documents/Project/Socio/pics/P3.webp">
+                <img src="./pics/P3.webp">
             </div>
             <div class="action-buttons">
                 <div class="int-buttons">
@@ -277,13 +277,13 @@
             </div>
 
             <div class="liked-by">
-                <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+                <span><img src="./pics/PP5.webp"></span>
             <!-- </div> -->
             <!-- <div class="liked-by"> -->
-                <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+                <span><img src="./pics/S3.webp"></span>
             <!-- </div> -->
             <!-- <div class="liked-by"> -->
-                <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+                <span><img src="./pics/S5.jpeg"></span>
             <!-- </div> -->
             <p>liked by <b>Selena</b> and <b>200 others</b></p>
         </div>
@@ -300,7 +300,7 @@
         <div class="head">
             <div class="user">
                 <div class="profile-photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp">
+                    <img src="./pics/PP5.webp">
                 </div>
                 <div class="info">
                     <h3>Selena</h3>
@@ -313,7 +313,7 @@
         </div>
 
         <div class="photo">
-            <img src="/Users/maarvin/Documents/Project/Socio/pics/P4.jpeg">
+            <img src="./pics/P4.jpeg">
         </div>
         <div class="action-buttons">
             <div class="int-buttons">
@@ -327,13 +327,13 @@
         </div>
 
         <div class="liked-by">
-            <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+            <span><img src="./pics/PP5.webp"></span>
         <!-- </div> -->
         <!-- <div class="liked-by"> -->
-            <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+            <span><img src="./pics/S3.webp"></span>
         <!-- </div> -->
         <!-- <div class="liked-by"> -->
-            <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+            <span><img src="./pics/S5.jpeg"></span>
         <!-- </div> -->
         <p>liked by <b>JD</b> and <b>200 others</b></p>
     </div>
@@ -349,7 +349,7 @@
     <div class="head">
         <div class="user">
             <div class="profile-photo">
-                <img src="/Users/maarvin/Documents/Project/Socio/pics/PP10.webp">
+                <img src="./pics/PP10.webp">
             </div>
             <div class="info">
                 <h3>Captureit</h3>
@@ -362,7 +362,7 @@
     </div>
 
     <div class="photo">
-        <img src="/Users/maarvin/Documents/Project/Socio/pics/P5.jpeg">
+        <img src="./pics/P5.jpeg">
     </div>
     <div class="action-buttons">
         <div class="int-buttons">
@@ -376,13 +376,13 @@
     </div>
 
     <div class="liked-by">
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+        <span><img src="./pics/PP5.webp"></span>
     <!-- </div> -->
     <!-- <div class="liked-by"> -->
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+        <span><img src="./pics/S3.webp"></span>
     <!-- </div> -->
     <!-- <div class="liked-by"> -->
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+        <span><img src="./pics/S5.jpeg"></span>
     <!-- </div> -->
     <p>liked by <b>Selena</b> and <b>200 others</b></p>
 </div>
@@ -398,7 +398,7 @@
     <div class="head">
         <div class="user">
             <div class="profile-photo">
-                <img src="/Users/maarvin/Documents/Project/Socio/pics/PP8.jpeg">
+                <img src="./pics/PP8.jpeg">
             </div>
             <div class="info">
                 <h3>Cena</h3>
@@ -411,7 +411,7 @@
     </div>
 
     <div class="photo">
-        <img src="/Users/maarvin/Documents/Project/Socio/pics/P1.avif">
+        <img src="./pics/P1.avif">
     </div>
     <div class="action-buttons">
         <div class="int-buttons">
@@ -425,13 +425,13 @@
     </div>
 
     <div class="liked-by">
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/PP5.webp"></span>
+        <span><img src="./pics/PP5.webp"></span>
     <!-- </div> -->
     <!-- <div class="liked-by"> -->
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S3.webp"></span>
+        <span><img src="./pics/S3.webp"></span>
     <!-- </div> -->
     <!-- <div class="liked-by"> -->
-        <span><img src="/Users/maarvin/Documents/Project/Socio/pics/S5.jpeg"></span>
+        <span><img src="./pics/S5.jpeg"></span>
     <!-- </div> -->
     <p>liked by <b>Selena</b> and <b>200 others</b></p>
 </div>
@@ -465,7 +465,7 @@
     <!-------------------------- MESSAGE 1 ----------------------------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP11.jpeg">
+                            <img src="./pics/PP11.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>VK</h5>
@@ -475,7 +475,7 @@
     <!-------------------------- MESSAGE 2 ----------------------------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP11.jpeg">
+                            <img src="./pics/PP11.jpeg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -486,7 +486,7 @@
     <!-------------------------- MESSAGE 3 ----------------------------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP11.jpeg">
+                            <img src="./pics/PP11.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>Gwen</h5>
@@ -509,7 +509,7 @@
                 <div class="request">                        
                     <div class="info">
                         <div class="profile-photo">
-                            <img src="/Users/maarvin/Documents/Project/Socio/pics/PP12.jpeg">
+                            <img src="./pics/PP12.jpeg">
                         </div>
                         <div>
                             <h5>Tina</h5>
@@ -533,7 +533,7 @@
         <div class="request">                        
             <div class="info">
                 <div class="profile-photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/PP12.jpeg">
+                    <img src="./pics/PP12.jpeg">
                 </div>
                 <div>
                     <h5>Chris</h5>
@@ -556,7 +556,7 @@
         <div class="request">                        
             <div class="info">
                 <div class="profile-photo">
-                    <img src="/Users/maarvin/Documents/Project/Socio/pics/PP12.jpeg">
+                    <img src="./pics/PP12.jpeg">
                 </div>
                 <div>
                     <h5>Hella</h5>
