--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Socio</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="./Socio.js"></script>
 </head>
 <body>
     <nav>
@@ -640,6 +639,6 @@
 </div>
 </div>
 
-<script src="/Users/maarvin/Documents/Project/Socio/index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
